# slurm-compose

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: prek.yml  pytest.yml
.mise/: config.toml
.mise/tasks/: sc  setup
pkgs/core/: pyproject.toml
pkgs/core/src/slurm_compose/: __init__.py  cli.py  config.py
pkgs/core/src/slurm_compose/api/: __init__.py  base.py  exporter.py  packager.py  python.scignore  pyxis.py  slurm.py  srun.py  utils.py
pkgs/core/src/slurm_compose/api/scripts/: __init__.py  base.py  pyxis.py  srun.py  utils.py
pkgs/core/src/slurm_compose/api/scripts/include/: common.sh
pkgs/core/src/slurm_compose/api/scripts/ray/: __init__.py  kv.py  pyxis.py  srun.sh
pkgs/core/src/slurm_compose/api/scripts/sglang/: __init__.py  pyxis.py  srun.sh
pkgs/core/src/slurm_compose/api/scripts/vllm/: __init__.py  pyxis.py  srun.sh
pkgs/core/src/slurm_compose/api/templates/: slurm.sh.j2
pkgs/core/src/slurm_compose/plugins/: __init__.py  base.py  registry.py  utils.py
pkgs/core/src/slurm_compose/plugins/export/: __init__.py  default.py
pkgs/core/tests/: test_cli.py  test_config.yml  test_host_config.py  test_hosts.toml  test_plugins.py  test_pyxis_job_step.py  test_slurm_job.py  test_utils.py  test_wait.yml
pkgs/core/tests/configs/: test.yml  wait.yml
